[gd_scene load_steps=10 format=3 uid="uid://hwxpyv05l7re"]

[ext_resource type="Texture2D" uid="uid://boxyekd0nje0g" path="res://Assets/UI/ValueRed_120x8.png" id="1_4tdjj"]
[ext_resource type="Texture2D" uid="uid://btgxivl6hplty" path="res://Assets/UI/ValueBar_128x16.png" id="1_o2efe"]
[ext_resource type="Script" path="res://Scenes/UI/health_special_bars.gd" id="1_tfssj"]
[ext_resource type="Texture2D" uid="uid://colyqmtbyech" path="res://Assets/UI/CornerKnot_14x14.png" id="2_qt2xl"]
[ext_resource type="Texture2D" uid="uid://cdv3gyhdjiep" path="res://Assets/UI/HealthBarPanel_160x41.png" id="3_aitqm"]
[ext_resource type="Texture2D" uid="uid://cxkqyrkw5uxtw" path="res://Assets/UI/BlackBigCircleBoxWithBorder_27x27.png" id="4_an2bu"]
[ext_resource type="Texture2D" uid="uid://cle5i8154yd4x" path="res://Assets/UI/HeartIcons_32x32.png" id="4_ugn8a"]
[ext_resource type="Texture2D" uid="uid://7yfcxfqcw4p3" path="res://Assets/UI/ValueWhite_120x8.png" id="6_1t3us"]
[ext_resource type="Texture2D" uid="uid://des42ywoqldvm" path="res://Assets/UI/ValueBlue_120x8.png" id="7_vaujh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfssj")

[node name="background" type="NinePatchRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 32.0
offset_top = 18.0
offset_right = 377.0
offset_bottom = 76.0
texture = ExtResource("3_aitqm")
region_rect = Rect2(0, 0, 160, 41)
patch_margin_left = 11
patch_margin_top = 10
patch_margin_right = 11
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CornerKnot14x14" type="Sprite2D" parent="background"]
position = Vector2(340, 5)
texture = ExtResource("2_qt2xl")

[node name="CornerKnot14x15" type="Sprite2D" parent="background"]
position = Vector2(340, 53)
texture = ExtResource("2_qt2xl")

[node name="NinePatchRect" type="NinePatchRect" parent="background"]
z_index = 1
layout_mode = 0
offset_left = -12.0
offset_top = -11.0
offset_right = 28.0
offset_bottom = 29.0
scale = Vector2(2, 2)
texture = ExtResource("4_an2bu")
region_rect = Rect2(0, 0, 41, 41)

[node name="HeartIcons32x32" type="Sprite2D" parent="background/NinePatchRect"]
position = Vector2(20, 21.5)
texture = ExtResource("4_ugn8a")

[node name="healthbar_Pannel" type="NinePatchRect" parent="background"]
layout_mode = 0
offset_left = 66.0
offset_top = 11.0
offset_right = 335.0
offset_bottom = 31.0
texture = ExtResource("1_o2efe")
region_rect = Rect2(0, 0, 128, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="healthbar_white" type="TextureProgressBar" parent="background/healthbar_Pannel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 265.0
offset_bottom = 16.0
max_value = 256.0
step = 0.01
value = 256.0
nine_patch_stretch = true
texture_progress = ExtResource("6_1t3us")

[node name="healthbar" type="TextureProgressBar" parent="background/healthbar_Pannel"]
z_index = 1
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 265.0
offset_bottom = 16.0
max_value = 256.0
step = 0.01
value = 256.0
nine_patch_stretch = true
texture_progress = ExtResource("1_4tdjj")

[node name="health_timer" type="Timer" parent="background/healthbar_Pannel"]
wait_time = 0.4
one_shot = true

[node name="specialbar_Pannel" type="NinePatchRect" parent="background"]
layout_mode = 0
offset_left = 66.0
offset_top = 33.0
offset_right = 335.0
offset_bottom = 47.0
texture = ExtResource("1_o2efe")
region_rect = Rect2(0, 0, 128, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="specialbar_white" type="TextureProgressBar" parent="background/specialbar_Pannel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 265.0
offset_bottom = 10.0
max_value = 128.0
step = 0.01
value = 120.0
nine_patch_stretch = true
texture_progress = ExtResource("6_1t3us")

[node name="specialbar" type="TextureProgressBar" parent="background/specialbar_Pannel"]
z_index = 1
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 265.0
offset_bottom = 10.0
max_value = 128.0
step = 0.01
value = 64.0
nine_patch_stretch = true
texture_progress = ExtResource("7_vaujh")

[node name="special_timer" type="Timer" parent="background/specialbar_Pannel"]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="background/healthbar_Pannel/health_timer" to="." method="_on_health_timer_timeout"]
[connection signal="timeout" from="background/specialbar_Pannel/special_timer" to="." method="_on_special_timer_timeout"]
